add new changes

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
                         <img src="image.png" alt="logo-image">
                     </a>
                 </div>
-                <ul>
-                    <li><a href="About.html">About</a></li>
-                    <li><a href="Resume.html">Resume</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Blog.html">Blog</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
-                </ul>
+                <div class="portfolio-menu">
+                    <ul>
+                        <li><a href="About.html">About</a></li>
+                        <li><a href="Resume.html">Resume</a></li>
+                        <li><a href="Portfolio.html">Portfolio</a></li>
+                        <li><a href="Blog.html">Blog</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                
             </nav>
         </header>
         <main>
@@ -39,10 +42,10 @@
                 </div>
                 <div class="social-media">
                     <ul>
-                        <li><a href="#"><img src="image.png" alt="facebook"></a></li>
-                        <li><a href="#"><img src="image.png" alt="twitter"></a></li>
-                        <li><a href="#"><img src="image.png" alt="linkedin"></a></li>
-                        <li><a href="#"><img src="image.png" alt="github"></a></li>
+                        <li><a href="#"><img src="image/facebook.svg" alt="facebook"></a></li>
+                        <li><a href="#"><img src="image/twitter.svg" alt="twitter"></a></li>
+                        <li><a href="#"><img src="image/linkedin.svg" alt="linkedin"></a></li>
+                        <li><a href="#"><img src="image/github.svg" alt="github"></a></li>
                     </ul>
                 </div>
             </div>
