--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Portfolio Homepage</title>
+    <style>
+        .container {
+            background-image: url('image/bkground.jpg');
+            background-color: black;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            height: 100vh; 
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -18,11 +29,11 @@
                 </div>
                 <div class="portfolio-menu">
                     <ul>
-                        <li><a href="About.html">About</a></li>
-                        <li><a href="Resume.html">Resume</a></li>
-                        <li><a href="Portfolio.html">Portfolio</a></li>
-                        <li><a href="Blog.html">Blog</a></li>
-                        <li><a href="Contact.html">Contact</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 
