--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <div class="portfolio-logo">
                     <a href="index.html">
-                        <img src="image.png" alt="logo-image">
+                        <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
                     </a>
                 </div>
                 <div class="portfolio-menu">
