--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 </div>
                 <div class="social-media">
                     <ul>
-                        <li><a href="#"><img src="image/facebook.svg" alt="facebook"></a></li>
-                        <li><a href="#"><img src="image/twitter.svg" alt="twitter"></a></li>
-                        <li><a href="#"><img src="image/linkedin.svg" alt="linkedin"></a></li>
-                        <li><a href="#"><img src="image/github.svg" alt="github"></a></li>
+                        <li><a href="www.facebook.com" target="_blank"><img src="image/facebook.svg" alt="facebook"></a></li>
+                        <li><a href="https://twitter.com/Drasta127" target="_blank"><img src="image/twitter.svg" alt="twitter"></a></li>
+                        <li><a href="https://www.linkedin.com/in/tuyishime-thierry-9149a31a5/" target="_blank"><img src="image/linkedin.svg" alt="linkedin"></a></li>
+                        <li><a href="https://github.com/Thierry-Drasta" target="_blank"><img src="image/github.svg" alt="github"></a></li>
                     </ul>
                 </div>
             </div>
