changes to files

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Aboutpage</title>
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
+     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 </head>
 <body>
     <div class="container">
@@ -101,8 +102,97 @@
                                 
                             </ul>
                         </div>
-
                     </div> 
+                </div>
+
+                <div class="my-services">
+                    <p class="service-small-title">What I do</p>
+                    <h1>My Services</h1>
+
+                    <div class="services">
+                        <div class="service">
+                            <div class="service-image">
+                                <img src="image/ux-ui.png" alt="uxui" width="100px" height="100px">
+                            </div>
+                            <div class="service-content">
+                                <h3>UX/UI Design</h3>
+                                <p>
+                                    I design and develop services in a way that provides meaningful and relevant experiences to users.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service-image">
+                                <img src="image/coding.png" alt="web" width="100px" height="100px">
+                            </div>
+                            <div class="service-content">
+                                <h3>Web & Mobile Development</h3>
+                                <p>
+                                    I build websites that are fast, responsive and user-friendly.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service-image">
+                                <img src="image/logosoft.png" alt="mobile" width="100px" height="100px">
+                            </div>
+                            <div class="service-content">
+                                <h3>Customer Support</h3>
+                                <p>
+                                    I help customers to solve their problems and answer their questions
+                                    in a timely manner. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="my-testimonials">
+                    <p class="testimonial-small-title">What my clients say</p>
+                    <h1>Testimonials</h1>
+
+                    <div class="active-testimonials">
+
+                        <div class="testimonial">
+                            <div class="testimonial-image">
+                                <img src="image/newtech.jpeg" alt="testimonial1" width="100px" height="100px">
+                            </div>
+                            <div class="testimonial-header">
+                                <h3>John Doe</h3>
+                                <h4>CEO, ABC Company</h4>
+                            </div>
+                            <div class="icon-quote">
+                                <i class="fa fa-quote-right"></i> 
+                            </div>
+                            <div class="testimonial-content">
+                                <p>
+                                    "Thierry is a great designer and developer. He is very professional and
+                                    always delivers on time. I would highly recommend him for any project."
+                                </p>
+                                
+                            </div>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-image">
+                                <img src="image/mojo.jpg" alt="testimonial2" width="100px" height="100px">
+                            </div>
+                            <div class="testimonial-header">
+                                <h3>John Doe</h3>
+                                <h4>CEO, ABC Company</h4>
+                            </div>
+                            <div class="icon-quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="testimonial-content">
+                                <p>
+                                    "Thierry is a great designer and developer. He is very professional and
+                                    always delivers on time. I would highly recommend him for any project."
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </main>
