--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
         </header>
         <main>
             <div class="title">
-                <h1>Hi, I'm <span class="name">Thierry TUYISHIME</span></h1>
-                <p>I'm a Full Stack Developer</p>
+                <div class="big-header">
+                    <h1>Hi, I'm <span class="name">Thierry TUYISHIME</span></h1>
+                </div> 
+                <div class="small-header">
+                    <p>I'm a Full Stack Developer</p>
+                </div>
             </div>
             <div class="sided-navigation">
                 <div class="languages">
