--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,11 @@
                         <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
                     </a>
                 </div>
+                <svg xmlns="http://www.w2.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" style="width: 19px; " class="humberger">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M2.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
+                </svg>
                 <div class="portfolio-menu">
                     <ul>
                         <li><a href="about.html">About</a></li>
@@ -35,7 +40,9 @@
             <div class="contact-details">
                 <p class="simple-title">Feel free to contact anytime</p>
                 <h1>Get In Touch</h1>
-                <hr class="underinfo">
+                <div >
+                    <hr class="underinfo">
+                </div>
 
                 <div class="contact-session">
                 
@@ -131,6 +138,6 @@
 
     </div>
 
-    <script type="text/javascript" src="js/indexjs.js" ></script>
+    <script type="text/javascript" src="js/indexjs.js"></script>
 </body>
 </html>
