--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,11 @@
                         <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
                     </a>
                 </div>
+                <svg xmlns="http://www.w2.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" style="width: 19px; " class="humberger">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M2.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
+                </svg>
                 <div class="portfolio-menu">
                     <ul>
                         <li><a href="about.html">About</a></li>
