--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <a href="#">ResourcesHub</a>
                         </li>
                         <li>
-                            <a href="#">Blog</a>
+                            <a href="blogForm.html">Blog</a>
                         </li>
                         <li>
                             <a href="#">Learn More</a>
