--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                    
                     <div class="item" style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.144)), url('image/products/service-0.jpg'); background-size:contain;">
                         <div class="contents">
-                            <a href="https://codepen.io/ThierryDrst/pen/RwBaMjJ">
+                            <a href="https://codepen.io/ThierryDrst/pen/RwBaMjJ" target="_blank">
                                 <h3>Todo List App</h3>
                                 <p>More Info</p>
                             </a>
@@ -70,7 +70,7 @@
 
                     <div class="item" style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.144)), url('image/products/service-0.jpg'); background-size:contain;">
                         <div class="contents">
-                            <a href="https://codepen.io/ThierryDrst/pen/GRBjvqY">
+                            <a href="https://codepen.io/ThierryDrst/pen/GRBjvqY" target="_blank">
                                 <h3>Calculator</h3>
                                 <p>More Info</p>
                             </a>
