--- a/blog.html
+++ b/blog.html
@@ -16,18 +16,21 @@
                         <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
                     </a>
                 </div>
-                <svg xmlns="http://www.w2.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" style="width: 19px; " class="humberger">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M2.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
-                </svg>
+                <div class="openmenu">
+                    <i class="gg-menu"></i>
+                </div>
+
                 <div class="portfolio-menu">
-                    <ul>
+                    <ul class="mainmenu">
                         <li><a href="about.html">About</a></li>
                         <li><a href="resume.html">Resume</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
+
+                        <div class="closemenu">
+                            <i class="gg-close"></i>
+                        </div>
                     </ul>
                 </div>
             </nav>            
