--- a/about.html
+++ b/about.html
@@ -17,13 +17,21 @@
                         <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
                     </a>
                 </div>
+                <div class="openmenu">
+                    <i class="gg-menu"></i>
+                </div>
+
                 <div class="portfolio-menu">
-                    <ul>
+                    <ul class="mainmenu">
                         <li><a href="about.html">About</a></li>
                         <li><a href="resume.html">Resume</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
+
+                        <div class="closemenu">
+                            <i class="gg-close"></i>
+                        </div>
                     </ul>
                 </div>
             </nav>            
