--- a/about.html
+++ b/about.html
@@ -11,37 +11,41 @@
 <body>
     <div class="container">
         <header>
-            <nav>
-                <div class="portfolio-logo">
-                    <a href="index.html">
-                        <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
-                    </a>
-                </div>
-                <div class="openmenu">
-                    <i class="gg-menu"></i>
+            <nav class="nav-bar">
+                <a href="index.html" class="nav-branding">
+                    <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
+                </a>
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link">about</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="resume.html" class="nav-link">resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="portfolio.html" class="nav-link">portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="blog.html" class="nav-link">blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html " class="nav-link">contact</a>
+                    </li>
+                </ul>
+                <div class="humberger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
                 </div>
 
-                <div class="portfolio-menu">
-                    <ul class="mainmenu">
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-
-                        <div class="closemenu">
-                            <i class="gg-close"></i>
-                        </div>
-                    </ul>
-                </div>
-            </nav>            
+            </nav>
         </header>
 
         <main>
             <div class="my-details">
 
                 <div class="main-image">
-                    <img src="image/myimage.jpg" alt="about-image" width="300px" height="100px">
+                    <img src="image/developer11.jpg" alt="about-image" width="300px" height="100px">
                 </div>
                 
                 <div class="main-content">
