--- a/portfolio.html
+++ b/portfolio.html
@@ -10,30 +10,34 @@
 <body>
     <div class="container">
         <header>
-            <nav>
-                <div class="portfolio-logo">
-                    <a href="index.html">
-                        <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
-                    </a>
-                </div>
-                <div class="openmenu">
-                    <i class="gg-menu"></i>
+            <nav class="nav-bar">
+                <a href="index.html" class="nav-branding">
+                    <img src="image/mylogo.jpg" alt="logo-image" width="150px" height="80px">
+                </a>
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link">about</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="resume.html" class="nav-link">resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="portfolio.html" class="nav-link">portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="blog.html" class="nav-link">blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html " class="nav-link">contact</a>
+                    </li>
+                </ul>
+                <div class="humberger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
                 </div>
 
-                <div class="portfolio-menu">
-                    <ul class="mainmenu">
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-
-                        <div class="closemenu">
-                            <i class="gg-close"></i>
-                        </div>
-                    </ul>
-                </div>
-            </nav>           
+            </nav>
         </header>
         <main>
             <div class="portfolio-head">
@@ -62,7 +66,7 @@
 
                 <div class="items">
                    
-                    <div class="item" style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.144)), url('image/products/service-0.jpg'); background-size:contain;">
+                    <div class="item" style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.144)), url('image/products/in7r7auvg6xujj5fm1gm.webp'); background-size:contain;">
                         <div class="contents">
                             <a href="https://codepen.io/ThierryDrst/pen/RwBaMjJ" target="_blank">
                                 <h3>Todo List App</h3>
@@ -71,7 +75,7 @@
                         </div>
                     </div>
 
-                    <div class="item" style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.144)), url('image/products/service-0.jpg'); background-size:contain;">
+                    <div class="item" style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.144)), url('image/products/office-work-icon-gradient-calculator-260nw-1913914933.webp'); background-size:cover;">
                         <div class="contents">
                             <a href="https://codepen.io/ThierryDrst/pen/GRBjvqY" target="_blank">
                                 <h3>Calculator</h3>
