--- a/contact.html
+++ b/contact.html
@@ -146,5 +146,6 @@
     </div>
 
     <script type="text/javascript" src="js/indexjs.js"></script>
+    <script type="text/javascript" src="js/menujs.js"></script>
 </body>
 </html>
