--- a/portfolio.html
+++ b/portfolio.html
@@ -119,10 +119,10 @@
                             </a>
                         </div>
                     </div>
-                    
                 </div>
-
         </main>
     </div>
+
+    <script type="text/javascript" src="js/menujs.js"></script>
 </body>
 </html>
