--- a/blogForm.html
+++ b/blogForm.html
@@ -67,5 +67,7 @@
             </div>
         </main>
     </div>
+
+    <script type="text/javascript" src="js/menujs.js"></script>
 </body>
 </html>
