--- a/resume.html
+++ b/resume.html
@@ -223,5 +223,7 @@
             </div>
         </main>
     </div>
+
+    <script type="text/javascript" src="js/menujs.js"></script>
 </body>
 </html>
