changes to index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <style>
         .container {
-            background-image: url('image/bkground.jpg');
+            background-image: url('image/bkgroundme.jpg');
             background-color: black;
             background-position: center;
             background-size: cover;
